@@ -784,7 +784,8 @@ attribution parts.  You can eyeball those to figure out what the
 encoding is and apply the `<<transcode_cmd>>` command to fix things.
 Note that this will *not* flag and detect commmits with metadata in
 ISO 8859 single-byte encodings, which can't be distinguished from
-Unicode Latin-1 by looking at the bytes.
+Unicode Latin-1 by looking at the bytes.  You can find these with the
+`=J` selection
 
 Reposurgeon has a `<<merge_cmd>>` command specifically for performing
 branch merges.  The `<<msgin_cmd>>` command will also allow you to add
